publicstatus: split public status endpoints
